--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "dev": "cd backend && npm run dev"
   },
   "dependencies": {
+    "pdf-lib": "^1.17.1",
+    "react-pdf": "^10.0.1",
     "react-router-dom": "^7.8.0"
   }
 }
