--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "axios": "^1.7.2",
     "i18next": "^23.11.5",
+    "pdf-lib": "^1.17.1",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^14.1.3",
     "react-icons": "^4.10.1",
-    "react-pdf": "^10.0.1",
-    "pdf-lib": "^1.17.1"
+    "react-pdf": "^10.0.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
